# verthandi

./: .gitignore  .mypy.ini  README.md  pyproject.toml  tasks.py
verthandi/: __init__.py  config.py
verthandi/cli/: main.py
verthandi/clockify/: api.py  client.py  typing.py
